Move styling code into stylesheets and prevent header from covering content

--- a/static/css/github-style.css
+++ b/static/css/github-style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-padding-top: 5em;
+}
+
 body {
   margin: 0;
 }
@@ -113,6 +117,54 @@ body {
 
 .details-reset>summary {
   outline: none;
+}
+
+/* TODO: Fix the fact that the sticky header covers some of the page content */
+.sticky-header {
+  position: sticky;
+  top: 0;
+}
+
+.tippy-box {
+  border-radius: 10px;
+}
+
+.tippy-content {
+  border-radius: 10px;
+  background-color: var(--color-bg-table-of-contents-container);
+  border: 1px solid var(--color-border-primary);
+  overflow-y: hidden;
+  padding: 0;
+}
+
+#table-of-contents {
+  max-height: 30em;
+  overflow-y: scroll;
+}
+#table-of-contents > nav ul {
+  list-style-type: none;
+}
+
+#table-of-contents > nav > ul li > a {
+  color: var(--color-text-primary);
+  text-decoration: none;
+  padding: 0.5em;
+  border-radius: 6px;
+  display: block;
+}
+
+#table-of-contents > nav > ul li > a.table-of-contents-option-selected {
+  background-color: var(--color-bg-table-of-contents-option-selected);
+  color: var(--color-fg-table-of-contents-option-selected);
+}
+
+#table-of-contents > nav ul > li {
+  margin-left: 1em;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+}
+
+#table-of-contents > nav > ul > li {
+  margin-left: 0;
 }
 
 @media (max-width: 768px) {
